--- a/style.css
+++ b/style.css
@@ -440,7 +440,7 @@ footer .container ul a:hover {
         display: inline-block;
         cursor: pointer;
         background: transparent;
-        color: var(--color-black);
+        color: var(--color-primary);
         margin-right: 1rem;
     }
     nav button#close-btn {
